[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Piotr Jagiello <piotr_jagiello90@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
actix-web = "4"
